# nostr-platform

./: .gitignore  BUG_REPORT.md  README.md  pyproject.toml
docs/: design.md  plan.md
tests/: conftest.py  test_adapter.py  test_crypto.py  test_event_router.py  test_profile_cache.py  test_relay_pool.py
