[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nostr-platform"
version = "1.0.0"
description = "Nostr gateway adapter plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hermes Community"},
]
keywords = ["nostr", "hermes", "agent", "ai", "nip-17", "nip-44", "relay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]

dependencies = [
    "pynostr>=0.7",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/cortexuvula/nostr-platform"
Repository = "https://github.com/cortexuvula/nostr-platform"
Issues = "https://github.com/cortexuvula/nostr-platform/issues"

[tool.setuptools.packages.find]
where = ["plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
